SQuirreL SQL Client Change Log
==============================


2.6.4 (??/??/????)
=================

Bug-Fixes:

Syntax Plugin: Fixed memory leak which caused sessions not to be garbage 
collected.

2.6.3 (12/22/2007)
=================

Bug-Fixes:

1848924: Sybase object browser contents not displayed.
1541325: Connection doesn't close when ending session - thanks goes to
         Alex Pivovarov for the patch that fixed the issue.

Oracle Plugin:
 - Allow the user to configure whether or not to show the syntax error offset in 
   the SQL Editor


2.6.2 (11/30/2007)
=================

Bug-Fixes:

1820792: Sybase ASE - table not shown in object browser
1821354: Changing default value of a column in Derby does nothing
1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1
1820020: modified tables aren't sorted

2.6.1 (10/24/2007)
=================

Bug-Fixes:

1818446: Packaging problem in v2.6 on MacOS X - fails to launch
1805954: Tables not in alpha order in Object view


2.6 (10/20/2007)
===============

Enhancements:

New Plugin (Hibernate)
   - allows to generate SQL statements from Hibernate HQL statements
   - shows object tree of mapped objects
   - HQL Code completion and syntax highlighting
   - Three ways to create a HibernateSessionFactory
     * Native way using "new Configuration().configure().buildSessionFactory();"
     * JPA way using "Persistence.createEntityManagerFactory("<persitence-unit name>");"
     * User defined way to by calling a user defined provider method.
   See help for further details.

Improved speed at which large files are loaded into import popup for 
CLOB/VARCHAR cells.

Added basic drag-n-drop to transfer a file from the desktop into an SQL Editor 
panel.


New Plugin (SQL Parametrisation - Thorsten Mürell) allows you to put variables 
           into your SQL statements.
           
New Plugin (Data import - Thorsten Mürell) allows you to import arbitrary files
           into the database.

DBCopy Plugin: